deploy/kubernetes/overlays/prod/grafana-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: logwise
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
